[package]
authors = ["Johan Gardell <736172+gardell@users.noreply.github.com>"]
categories = [ "memory-management", "rust-patterns" ]
description = "Register scoped functions with local references to 'static lifetime callbacks in a safe manner"
documentation = "https://docs.rs/scoped-callback"
edition = "2018"
homepage = "https://github.com/gardell/scoped-callback"
keywords = [ "async", "memory", "rust", "static" ]
license = "Apache-2.0"
name = "scoped-callback"
publish = [ "crates-io" ]
readme = "README.md"
repository = "https://github.com/gardell/scoped-callback"
version = "0.0.0"

[dependencies]
futures-util = "0.3"
