[package]
authors = ["Johan Gardell <736172+gardell@users.noreply.github.com>"]
categories = [ "memory-management", "no-std", "rust-patterns" ]
description = "Register scoped functions with local references to 'static lifetime callbacks in a safe manner"
documentation = "https://docs.rs/scoped-callback"
edition = "2018"
homepage = "https://github.com/gardell/scoped-callback"
keywords = [ "async", "memory", "no-std", "rust", "static" ]
license = "Apache-2.0"
name = "scoped-callback"
publish = [ "crates-io" ]
readme = "README.md"
repository = "https://github.com/gardell/scoped-callback"
version = "0.1.1"

[dependencies]
futures-util = {version = "0.3", optional = true }

[features]
async = ["futures-util"]
default = ["async", "std"]
std = []
